Fix - Overlayer not showing on iOS

--- a/src/browser/components/common/overlayer/Overlayer.css
+++ b/src/browser/components/common/overlayer/Overlayer.css
@@ -1,4 +1,5 @@
 .overlayer{
+	display:inline-block;
 	position:fixed; z-index:3;
 	top:0; left:0;
 	width:100vw; height:100vh;
